# crab-drop

./: .editorconfig  .gitignore  Cargo.toml  LICENSE  README.md
.github/workflows/: release.yml
src/core/: errors.rs
src/core/crypto/: aead.rs  errors.rs
src/domain/: mod.rs
src/domain/crypto/: aead.rs  hkdf.rs  mod.rs  nonce.rs
src/domain/protocol/: discovery.rs  handshake.rs  message.rs  mod.rs  transfer.rs
src/infrastructure/crypto/: aead.rs  hkdf_sha256.rs  mod.rs
src/infrastructure/protocol/: mdns_discovery.rs  mod.rs
