[package]
name = "crab-drop"
version = "0.0.1"
edition = "2024"
description = "Simple, fast and secure file transfer over local network"
readme = "README.md"
license = "MIT"
repository = "https://github.com/nontypeable/crab-drop"
keywords = ["file-transfer", "local-network"]
categories = ["command-line-utilities"]

[dependencies]
chacha20poly1305 = "0.10.1"
gethostname = "1.1.0"
hex = "0.4.3"
hkdf = "0.12.4"
mdns-sd = "0.17.1"
sha2 = "0.10.9"
thiserror = "2.0.17"

[profile.dev]
opt-level = 1
debug = true
split-debuginfo = "packed"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
panic = 'abort'
